--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     that persist through resonance</em>, not as isolated "things" with static properties.
                 </div>
 
-                <h2>The Central Insight</h2>
+                <h2>The central insight</h2>
                 <p>
                     Reality is not made of "things" but of <strong>coherence</strong>—structures that persist in networks 
                     because they <strong>resonate</strong> with their environment. A pattern exists not because it's "stored" 
@@ -344,7 +344,7 @@
                 </p>
 
                 <div class="highlight-box">
-                    <h3>The Whirlpool Analogy</h3>
+                    <h3>The whirlpool analogy</h3>
                     <p>Think of a whirlpool in a river:</p>
                     <ul>
                         <li>Not a "thing" you can pick up</li>
@@ -356,7 +356,7 @@
                     <p><strong>This is TNFR's model of everything</strong>: atoms, cells, thoughts, societies.</p>
                 </div>
 
-                <h2>The Nodal Equation</h2>
+                <h2>The nodal equation</h2>
                 <p>At the heart of TNFR is the <strong>nodal equation</strong>, which describes how every node 
                 in a TNFR network evolves:</p>
 
@@ -372,12 +372,12 @@
                     <li><strong>t</strong>: Time</li>
                 </ul>
 
-                <p><strong>Physical Meaning:</strong></p>
+                <p><strong>Physical meaning:</strong></p>
                 <div class="equation">
                     Rate of structural change = Reorganization capacity × Structural pressure
                 </div>
 
-                <h2>Key Concepts</h2>
+                <h2>Key concepts</h2>
                 <div class="key-concepts">
                     <div class="concept-card">
                         <h3>Coherence</h3>
@@ -416,7 +416,7 @@
                     </div>
                 </div>
 
-                <h2>The Paradigm Shift</h2>
+                <h2>The paradigm shift</h2>
                 <p><strong>Traditional View → TNFR View:</strong></p>
                 <ul>
                     <li>Objects exist independently → <strong>Patterns exist through resonance</strong></li>
@@ -450,7 +450,7 @@
             </div>
 
             <footer>
-                <p>&copy; 2024-2025 TNFR Python Engine | Licensed under MIT</p>
+                <p>&copy; 2025 TNFR Python Engine | Licensed under MIT</p>
                 <p>
                     <a href="https://github.com/fermga/TNFR-Python-Engine" target="_blank">GitHub</a> |
                     <a href="https://doi.org/10.5281/zenodo.17602861" target="_blank">DOI: 10.5281/zenodo.17602861</a> |
@@ -466,7 +466,7 @@
         <div class="lang-content" id="content-es">
             <header>
                 <h1>TNFR</h1>
-                <p class="tagline">Teoría Resonante de la Naturaleza Fractal</p>
+                <p class="tagline">Teoría de la Naturaleza Fractal Resonante</p>
                 <p>Modelar la realidad como resonancia coherente, no como objetos aislados</p>
             </header>
 
@@ -478,7 +478,7 @@
                     aisladas con propiedades estáticas.
                 </div>
 
-                <h2>La Comprensión Central</h2>
+                <h2>El punto clave</h2>
                 <p>
                     La realidad no está hecha de "cosas" sino de <strong>coherencia</strong>—estructuras que persisten 
                     en redes porque <strong>resuenan</strong> con su entorno. Un patrón existe no porque esté "almacenado" 
@@ -487,7 +487,7 @@
                 </p>
 
                 <div class="highlight-box">
-                    <h3>La Analogía del Remolino</h3>
+                    <h3>La analogía del remolino</h3>
                     <p>Piense en un remolino en un río:</p>
                     <ul>
                         <li>No es una "cosa" que se pueda recoger</li>
@@ -499,7 +499,7 @@
                     <p><strong>Este es el modelo de TNFR para todo</strong>: átomos, células, pensamientos, sociedades.</p>
                 </div>
 
-                <h2>La Ecuación Nodal</h2>
+                <h2>La ecuación nodal</h2>
                 <p>En el corazón de TNFR está la <strong>ecuación nodal</strong>, que describe cómo evoluciona 
                 cada nodo en una red TNFR:</p>
 
@@ -515,12 +515,12 @@
                     <li><strong>t</strong>: Tiempo</li>
                 </ul>
 
-                <p><strong>Significado Físico:</strong></p>
+                <p><strong>Significado físico:</strong></p>
                 <div class="equation">
                     Tasa de cambio estructural = Capacidad de reorganización × Presión estructural
                 </div>
 
-                <h2>Conceptos Clave</h2>
+                <h2>Conceptos clave</h2>
                 <div class="key-concepts">
                     <div class="concept-card">
                         <h3>Coherencia</h3>
@@ -559,7 +559,7 @@
                     </div>
                 </div>
 
-                <h2>El Cambio de Paradigma</h2>
+                <h2>El cambio de paradigma</h2>
                 <p><strong>Visión Tradicional → Visión TNFR:</strong></p>
                 <ul>
                     <li>Los objetos existen independientemente → <strong>Los patrones existen a través de la resonancia</strong></li>
@@ -582,7 +582,7 @@
             </div>
 
             <div class="cta-section">
-                <h2>¿Listo para Explorar TNFR?</h2>
+                <h2>¿Listo para explorar la TNFR?</h2>
                 <p>Sumérjase en la implementación computacional y comience a modelar coherencia</p>
                 <a href="https://github.com/fermga/TNFR-Python-Engine" class="cta-button" target="_blank">
                     Ver en GitHub
@@ -593,7 +593,7 @@
             </div>
 
             <footer>
-                <p>&copy; 2024-2025 TNFR Python Engine | Licenciado bajo MIT</p>
+                <p>&copy; 2025 TNFR Python Engine | Licenciado bajo MIT</p>
                 <p>
                     <a href="https://github.com/fermga/TNFR-Python-Engine" target="_blank">GitHub</a> |
                     <a href="https://doi.org/10.5281/zenodo.17602861" target="_blank">DOI: 10.5281/zenodo.17602861</a> |
