Correct capitalization and phrasing in index.html

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             </div>
 
             <div class="cta-section">
-                <h2>Ready to Explore TNFR?</h2>
+                <h2>Ready to explore TNFR?</h2>
                 <p>Dive into the computational implementation and start modeling coherence</p>
                 <a href="https://github.com/fermga/TNFR-Python-Engine" class="cta-button" target="_blank">
                     View on GitHub
@@ -457,7 +457,7 @@
                     <a href="https://github.com/fermga/TNFR-Python-Engine/blob/main/LICENSE.md" target="_blank">License</a>
                 </p>
                 <p style="margin-top: 1rem; font-style: italic;">
-                    Reality is not made of things—it's made of resonance.
+                    Reality is not made of things but of resonance.
                 </p>
             </footer>
         </div>
@@ -472,7 +472,7 @@
 
             <div class="main-content">
                 <div class="intro">
-                    <strong>TNFR</strong> (Teoría Resonante de la Naturaleza Fractal) es un paradigma computacional 
+                    <strong>TNFR</strong> (Teoría de la Naturaleza Fractal Resonante) es un paradigma computacional 
                     fundamentado en la física que propone una reconceptualización radical de la realidad: <em>la realidad 
                     se modela como patrones coherentes que persisten a través de la resonancia</em>, no como "cosas" 
                     aisladas con propiedades estáticas.
